[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Unit.gd" type="Script" id=1]
[ext_resource path="res://Images/playerHead.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Gunshot.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/PistolClick.wav" type="AudioStream" id=4]
[ext_resource path="res://Images/newSTUFF/pistol.png" type="Texture" id=5]
[ext_resource path="res://Sounds/reload.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/AmmoPickup.wav" type="AudioStream" id=7]
[ext_resource path="res://Images/betterBody.png" type="Texture" id=8]
[ext_resource path="res://Scenes/bloodParticles.tscn" type="PackedScene" id=9]
[ext_resource path="res://Images/newSTUFF/AR/ARwithMag.png" type="Texture" id=10]
[ext_resource path="res://Images/newSTUFF/AR/ARwithoutMag.png" type="Texture" id=11]
[ext_resource path="res://Images/playerParts/playerHead1.png" type="Texture" id=12]
[ext_resource path="res://Images/playerParts/playerBody1.png" type="Texture" id=13]
[ext_resource path="res://Images/newSTUFF/pistolFire/pistol2.png" type="Texture" id=14]
[ext_resource path="res://Images/newSTUFF/pistolFire/pistol3.png" type="Texture" id=15]
[ext_resource path="res://Images/newSTUFF/pistolFire/pistol1.png" type="Texture" id=16]
[ext_resource path="res://Images/newSTUFF/meleeSwipe.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 5 ) ],
"loop": true,
"name": "fire",
"speed": 30.0
} ]

[node name="Unit" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="MainCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="HandPivot" type="Node2D" parent="."]

[node name="ARwithMag" type="Sprite" parent="HandPivot"]
visible = false
position = Vector2( 4, -4 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )
centered = false
region_enabled = true
region_rect = Rect2( 20, 162, 162, 71 )

[node name="ARwithoutMag" type="Sprite" parent="HandPivot"]
visible = false
position = Vector2( 4, -4 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 11 )
centered = false
region_enabled = true
region_rect = Rect2( 20, 162, 162, 71 )

[node name="Pistol" type="AnimatedSprite" parent="HandPivot"]
position = Vector2( 9.76522, 1.42687 )
scale = Vector2( 0.0336933, 0.0292739 )
frames = SubResource( 2 )
animation = "fire"
frame = 1

[node name="BulletPoint" type="Node2D" parent="HandPivot/Pistol"]
position = Vector2( 36.6476, -82.9023 )
scale = Vector2( 29.6795, 34.1601 )

[node name="meleeSwipe" type="Sprite" parent="HandPivot"]
visible = false
position = Vector2( 8, -2 )
scale = Vector2( 0.0186527, 0.0322345 )
texture = ExtResource( 17 )

[node name="Area2D" type="Area2D" parent="HandPivot/meleeSwipe"]
collision_layer = 0
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HandPivot/meleeSwipe/Area2D"]
polygon = PoolVector2Array( -107.223, -217.159, 107.223, -155.114, 214.447, 31.0227, 53.6117, 217.159, -375.282, 248.182, -375.282, 62.0454, -375.282, -155.114 )

[node name="ReloadBar" type="ProgressBar" parent="."]
visible = false
margin_left = -6.0
margin_top = -10.0
margin_right = 83.0
margin_bottom = 4.0
rect_scale = Vector2( 0.131326, 0.131326 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReloadTime" type="Timer" parent="ReloadBar"]
wait_time = 0.5
one_shot = true

[node name="PistolShootSound" type="AudioStreamPlayer2D" parent="ReloadBar"]
stream = ExtResource( 3 )

[node name="ReloadSound" type="AudioStreamPlayer2D" parent="ReloadBar"]
stream = ExtResource( 6 )

[node name="PistolClick" type="AudioStreamPlayer2D" parent="ReloadBar"]
position = Vector2( 0, 7.62939e-06 )
stream = ExtResource( 4 )

[node name="AmmoPickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 5.049

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="playerHead" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -4 )
texture = ExtResource( 2 )

[node name="deathTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="bloodParticles" parent="." instance=ExtResource( 9 )]
position = Vector2( -2.27374e-13, -2.38419e-07 )

[node name="betterBody" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 4 )
texture = ExtResource( 8 )

[node name="playerParts" type="Node2D" parent="."]

[node name="playerBody1" type="Sprite" parent="playerParts"]
position = Vector2( 1, -1.13687e-13 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 13 )

[node name="playerHead1" type="Sprite" parent="playerParts"]
position = Vector2( 1, 9.53674e-07 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 12 )

[node name="meleeTime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="meleeDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="animation_finished" from="HandPivot/Pistol" to="." method="_on_Pistol_animation_finished"]
[connection signal="body_entered" from="HandPivot/meleeSwipe/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="HandPivot/meleeSwipe/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="ReloadBar/ReloadTime" to="." method="_on_ReloadTime_timeout"]
[connection signal="timeout" from="deathTimer" to="." method="_on_deathTimer_timeout"]
[connection signal="timeout" from="meleeTime" to="." method="_on_meleeTime_timeout"]
[connection signal="timeout" from="meleeDelay" to="." method="_on_meleeDelay_timeout"]
